index.html muito feio

--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <title>Check Claim Status</title>
   <style>
     body { font-family: sans-serif; background: #111; color: #eee; display: flex; flex-direction: column; align-items: center; gap: 1rem; padding: 2rem; }
-    button { padding: 1rem 2rem; font-size: 1rem; border: none; border-radius: 8px; cursor: pointer; }
-    #status { margin-top: 1rem; }
   </style>
 </head>
 <body>
+  <h1>🎙️ Claim Status Assistant</h1>
   <elevenlabs-convai agent-id="agent_4901k9fmsbzafwgse6wpsnrbjh5y"></elevenlabs-convai><script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
 </body>
 </html>
